--- a/ChatClient/Resources/Border.xaml
+++ b/ChatClient/Resources/Border.xaml
@@ -33,10 +33,7 @@
     </Style>
 
     <Style x:Key="chatBorder" TargetType="{x:Type Border}">
-        <Setter Property="BorderBrush" Value="#C2AD35"/>
-        <Setter Property="Background" Value="{StaticResource chatTitleColors}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="CornerRadius" Value="5"/>
+        <Setter Property="Background" Value="#D8DFD3"/>
     </Style>
 
     <Style x:Key="outerBorder" TargetType="{x:Type Border}" >
