--- a/ChatClient/Resources/Menu.xaml
+++ b/ChatClient/Resources/Menu.xaml
@@ -66,7 +66,7 @@
         <Setter Property="CommandParameter">
             <Setter.Value>
                 <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                    <Binding ElementName="activeUsersListBox" Path="SelectedItem"/>
+                    <Binding ElementName="menu" Path="DataContext"/>
                     <Binding Mode="TwoWay" 
                                                  Path="(viewmodels:ChatViewModel.DurationTime)"
                                                  RelativeSource="{RelativeSource Self}"/>
@@ -80,7 +80,7 @@
         <Setter Property="CommandParameter">
             <Setter.Value>
                 <MultiBinding Converter="{StaticResource multiBindingConverter}">
-                    <Binding ElementName="activeUsersListBox" Path="SelectedItem"/>
+                    <Binding ElementName="menu" Path="DataContext"/>
                     <Binding Mode="TwoWay" 
                                                  Path="(viewmodels:ChatViewModel.DurationTime)"
                                                  RelativeSource="{RelativeSource Self}"/>
