--- a/ChatClient/Resources/TextBox.xaml
+++ b/ChatClient/Resources/TextBox.xaml
@@ -117,5 +117,6 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
 </ResourceDictionary>
