--- a/ChatClient/Resources/Grid.xaml
+++ b/ChatClient/Resources/Grid.xaml
@@ -93,10 +93,11 @@
     <Style x:Key="gridSpliiter" TargetType="{x:Type GridSplitter}">
         <Setter Property="HorizontalAlignment" Value="Right"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="Width" Value="0"/>
-        <Setter Property="Background" Value="#9DA1A6"/>
+        <Setter Property="Width" Value="3"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Panel.ZIndex" Value="2"/> 
+        <Setter Property="Visibility" Value="Visible"/>
     </Style>
 
 </ResourceDictionary>
