--- a/ChatClient/Resources/ListBox.xaml
+++ b/ChatClient/Resources/ListBox.xaml
@@ -180,7 +180,7 @@
     </Style>
 
     <Style x:Key="privateUsersListBox" TargetType="{x:Type ListBox}">
-        <Setter Property="ItemsSource" Value="{Binding AllUsers}"/>
+        <Setter Property="ItemsSource" Value="{Binding FilterUsersCollectionView}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="Focusable" Value="False"/>
